// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Query Hook Generation > generates hook for query with arguments (factory) 1`] = `
"/**
 * Query Factory: get_user
 *
 * Auto-generated by @ic-reactor/codegen
 *
 * @example
 * const { data } = getUserQuery([arg1, arg2]).useQuery()
 * const data = await getUserQuery([arg1, arg2]).fetch()
 * getUserQuery([arg1, arg2]).invalidate()
 */

import { createQueryFactory } from "@ic-reactor/react"
import { myCanisterReactor } from "../reactor"

export const getUserQuery = createQueryFactory(myCanisterReactor, {
  functionName: "get_user",
})
"
`;

exports[`Query Hook Generation > generates hook for query without arguments (static) 1`] = `
"/**
 * Query: list_items
 *
 * Auto-generated by @ic-reactor/codegen
 *
 * @example
 * const { data } = listItemsQuery.useQuery()
 * const data = await listItemsQuery.fetch()
 * listItemsQuery.invalidate()
 */

import { createQuery } from "@ic-reactor/react"
import { myCanisterReactor } from "../reactor"

export const listItemsQuery = createQuery(myCanisterReactor, {
  functionName: "list_items",
})
"
`;

exports[`Query Hook Generation > generates suspense hooks correctly 1`] = `
"/**
 * Query Factory: get_user
 *
 * Auto-generated by @ic-reactor/codegen
 *
 * @example
 * const { data } = getUserSuspenseQuery([arg1, arg2]).useSuspenseQuery()
 * const data = await getUserSuspenseQuery([arg1, arg2]).fetch()
 * getUserSuspenseQuery([arg1, arg2]).invalidate()
 */

import { createSuspenseQueryFactory } from "@ic-reactor/react"
import { myCanisterReactor } from "../reactor"

export const getUserSuspenseQuery = createSuspenseQueryFactory(myCanisterReactor, {
  functionName: "get_user",
})
"
`;
